syntax = "proto3";

package ai.metathings.service.switcher;

import "switcher.proto";

message InfoResponse {
	Switcher switcher = 1;
}
