syntax = "proto3";

package ai.metathings.service.switcher;

import "switcher.proto";

message TurnOnResponse {
	Switcher switcher = 1;
}
